# sequence-crdt

./: .ccls  .gitignore  CMakeLists.txt  Makefile
cmake/: FindCheck.cmake  FindValgrind.cmake
inc/: check.h  check_stdint.h
src/: CMakeLists.txt  config.h.in  main.c  seqconfig.h.in
src/lib/: CMakeLists.txt
src/lib/include/: arraylist.c  bit.c  element.c  guid.c  sequence.c
src/lib/sequence/: sequence.c  token.h
src/model/: array.c  arraylist.c  arraylist.h  element.c  element.h  guid.c  sequence.c  sequence.h
src/model/crdt/: element.c  element.h  guid.c  guid.h  sequence.c  sequence.h
src/sequence/: CMakeLists.txt  arraylist.c  arraylist.h  bit.c  bit.h  element.c  element.h  guid.c  guid.h  sequence.c  sequence.h
src/util/: bit.c  bit.h
test/model/: arraylist_test.c  guid_compare_test.c  guid_gen_test.c  guid_test.c  sequence_display_test.c  sequence_guid_gen_test.c  sequence_indexing_test.c  sequence_insert_delete_test.c  sequence_test.c
test/model/crdt/: element_test.c  guid_test.c  sequence_test.c
test/model/crdt/element/: key_token_conv_test.c  main.c
test/model/util/: bit_test.c
test/util/: bit_test.c
tests/: CMakeLists.txt  check_arraylist.c  check_arraylist_get_set.c  check_arraylist_init.c  check_arraylist_insert_delete.c  check_bit.c  check_element.c  check_guid_compare.c  check_guid_gen.c  check_sequence_display.c  check_sequence_get.c  check_sequence_guid_gen.c  check_sequence_indexing.c  check_sequence_insert_delete.c  main_test.c
